# stwo

./: .all-contributorsrc  .gitignore  :w  Cargo.toml  README.md  \  a.txt  avx_benchmark.sh  clippy.toml  dasdad  deny.toml  mixed-degree-mt.md  poseidon_benchmark.sh  rust-toolchain.toml  rustfmt.toml  wide_fib_benchmark.sh
crates/air_utils/: Cargo.toml
crates/air_utils/src/: lib.rs  par_trace.rs
crates/air_utils/src/examples/: mod.rs
crates/air_utils/src/examples/poseidon/: mod.rs
crates/air_utils/src/lookup_data/: mod.rs
crates/air_utils/src/trace/: component_trace.rs  examle_lookup_data.rs  example_lookup_data.rs  iterable_trace.rs  mod.rs  par_trace.rs  row_iterator.rs
crates/air_utils_derive/: Cargo.toml
crates/air_utils_derive/src/: allocation.rs  iter_mut.rs  iterable_field.rs  lib.rs  par_iter.rs
crates/cuda/: Cargo.toml
crates/cuda/benches/: bit_rev.rs  merkle.rs
crates/cuda/src/: accumulation.rs  blake2s.rs  lib.rs  m31.rs
crates/cuda/src/kernels/: accumulate.cu  batch_inv.cu  bit_rev.cu  blake2s.cu  field.h
crates/prover/: .gitignore  Cargo.toml  bit_reverse.ptx  build.rs  m31.ptx  proof.cairo  qm31.ptx
crates/prover/benches/: batch_inverse.rs  bit_rev.rs  eval_at_point.rs  fft.rs  field.rs  fri.rs  grind.rs  interpolate.rs  lookups.rs  matrix.rs  merkle.rs  pcs.rs  poseidon.rs  prefix_sum.rs  quotients.rs
crates/prover/examples/: xor_lookup.rs
crates/prover/examples/poseidon_cost/: constraint_counter.rs  cost_counter.rs  main.rs
crates/prover/proptest-regressions/examples/range_check/: mod.txt
crates/prover/src/: lib.rs
crates/prover/src/builder/: assert.rs  domain.rs  info.rs  mod.rs  point.rs
crates/prover/src/commitment_scheme/: blake2_merkle.rs  blake2s_ref.rs  hasher.rs  ops.rs  prover.rs  verifier.rs
crates/prover/src/constraint_framework/: assert.rs  component.rs  constant_cols.rs  constant_columns.rs  cpu_domain.rs  domain.rs  expr.rs  info.rs  interaction_gen.rs  logup.rs  mod.rs  point.rs  poly.rs  poly_eval.rs  preprocessed_columns.rs  rational.rs  relation_tracker.rs  simd_domain.rs
crates/prover/src/constraint_framework/expr/: degree.rs  eval.rs  evaluator.rs  format.rs  mod.rs  simplify.rs  utils.rs
crates/prover/src/core/: channel.rs  circle.rs  constraints.rs  fft.rs  fri.rs  mod.rs  poseidon_channel.rs  proof_of_work.rs  queries.rs  secure_column.rs  test_utils.rs  utils.rs
crates/prover/src/core/air/: accumulation.rs  air_ext.rs  components.rs  mask.rs  mod.rs
crates/prover/src/core/backend/: mod.rs
crates/prover/src/core/backend/avx512/: accumulation.rs  bit_reverse.rs  blake2s.rs  blake2s_avx.rs  circle.rs  cm31.rs  fri.rs  m31.rs  mod.rs  qm31.rs  quotients.rs  tranpose_utils.rs
crates/prover/src/core/backend/cpu/: accumulation.rs  blake2s.rs  circle.rs  fri.rs  grind.rs  mod.rs  packed_field.rs  poseidon252.rs  poseidon31.rs  quotients.rs
crates/prover/src/core/backend/gpu/: accumulation.rs  bit_reverse.cu  bit_reverse.rs  butterfly.rs  butterfly.wgsl  circle.cu  circle.rs  circle.wgsl  column.cu  column.rs  error.rs  fft_layer.wgsl  fri.rs  m31.cu  m31.cuh  m31.h  m31.rs  mod.rs  packedm31.rs  qm31.cu  qm31.cuh  qm31.ptx  qm31.rs  quotients.rs  testing.rs
crates/prover/src/core/backend/simd/: accumulation.rs  allocator.rs  bit_reverse.rs  blake2s.rs  circle.rs  cm31.rs  column.rs  conversion.rs  domain.rs  fri.rs  grind.rs  m31.rs  mod.rs  par_trace.rs  poseidon31.rs  (+6 more)
crates/prover/src/core/channel/: blake2s.rs  mod.rs  poseidon252.rs  poseidon31.rs
crates/prover/src/core/commitment_scheme/: prover.rs  quotients.rs  verifier.rs
crates/prover/src/core/fields/: cm31.rs  m31.rs  mod.rs  qm31.rs  secure_column.rs
crates/prover/src/core/lookups/: eval_at_point.rs  gkr.rs  gkr_prover.rs  gkr_verifier.rs  grandproduct.rs  logup.rs  mle.rs  mod.rs  sumcheck.rs  utils.rs
crates/prover/src/core/pcs/: mod.rs  prover.rs  quotients.rs  utils.rs  verifier.rs
crates/prover/src/core/poly/: line.rs  mod.rs  twiddles.rs  utils.rs
crates/prover/src/core/prover/: mod.rs
crates/prover/src/core/vcs/: blake2_hash.rs  blake2_merkle.rs  blake2s_ref.rs  blake3_hash.rs  hash.rs  hasher.rs  mod.rs  ops.rs  poseidon252_merkle.rs  poseidon31_hash.rs  poseidon31_merkle.rs  poseidon31_ref.rs  prover.rs  test_utils.rs  utils.rs  verifier.rs
crates/prover/src/examples/: mod.rs  preprocessed_columns.rs
crates/prover/src/examples/blake/: air.rs  eval.rs  lookup.rs  mod.rs  preprocessed_columns.rs  round.rs  round_constraints.rs  round_gen.rs  scheduler.rs  scheduler_constraints.rs  scheduler_gen.rs  table.rs  xor_table.rs
crates/prover/src/examples/blake_gkr/: air.rs  mod.rs  round.rs  scheduler.rs  xor_table.rs
crates/prover/src/examples/eq_col/: mod.rs
crates/prover/src/examples/fibonacci/: air.rs  component.rs  mod.rs
crates/prover/src/examples/plonk/: mod.rs  preprocessed_columns.rs
crates/prover/src/examples/poseidon/: mod.rs
crates/prover/src/examples/range_check/: air.rs  component.rs  mod.rs
crates/prover/src/examples/simple_fib/: mod.rs
crates/prover/src/examples/state_machine/: components.rs  gen.rs  mod.rs
crates/prover/src/examples/toy_const/: constraints.rs  gen.rs  mod.rs
crates/prover/src/examples/wide_fibonacci/: avx.rs  component.rs  constraint_eval.rs  mod.rs  simd.rs  trace_gen.rs
crates/prover/src/examples/wider_fib/: component.rs  mod.rs  trace.rs
crates/prover/src/examples/xor/: air.rs  eq_eval_constraints.rs  mle_eval_constraints.rs  mod.rs  multilinear_eval_at_point.rs  prefix_sum_constraints.rs  prove.rs  unordered_xor_component.rs  xor_reference_component.rs  xor_table_component.rs
crates/prover/src/examples/xor2/: air.rs  mod.rs  multilinear_eval_at_point.rs  unordered_xor_component.rs
crates/prover/src/hash_functions/: poseidon.rs
crates/prover/src/math/: matrix.rs  mod.rs  utils.rs  vectorized.rs
crates/prover/src/trace_generation/: example.rs  mod.rs  prove.rs  registry.rs
crates/prover/src/wasm/: execute_gpu.rs  mod.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
crates/verifier/src/core/fields/: cm31.rs  m31.rs  mod.rs  qm31.rs
(+333 files in other folders)
