cargo-features = ["profile-rustflags"]

[package]
name = "stwo"
version = "0.1.1"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
blake3 = "1.5.0"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.17"
thiserror = "1.0.56"
bytemuck = { version = "1.14.3", features = ["derive"] }
derivative = "2.2.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
cfg-if = "1.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
    "html_reports",
    "cargo_bench_support",
] }
aligned = "0.4.2"

[lib]
bench = false

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[features]
avx512 = []

[profile.release]
# rustflags = ["-Awarnings", "-C", "target-cpu=native", "-C", "target-feature=+avx512f", "-C", "opt-level=2"]
rustflags = [
    "-Awarnings",
    "-C",
    "target-cpu=wasm32-wasi",
    "-C",
    "target-feature=+neon,+simd128",
    "-C",
    "opt-level=3",
]

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "bit_rev"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
harness = false
name = "field"

[[bench]]
harness = false
name = "matrix"

# [[bench]]
# name = "merkle"
# harness = false

[[bench]]
name = "fri"
harness = false

# [[bench]]
# name = "eval_at_point"
# harness = false

[[bench]]
name = "quotients"
harness = false
