[package]
name = "stwo-air-utils"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
itertools.workspace = true
num-traits.workspace = true
tracing.workspace = true
rayon = { version = "1.10.0", optional = false }
stwo-prover = { path = "../prover" }
stwo-air-utils-derive = { path = "../air_utils_derive" }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"] }

[lib]
bench = false
