[package]
name = "stwo-prover"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2.workspace = true
blake3.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if = "1.0.0"
derivative.workspace = true
hex.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
thiserror.workspace = true
tracing.workspace = true
cudarc.workspace = true
once_cell.workspace = true

[dev-dependencies]
aligned = "0.4.2"
test-log = { version = "0.2.15", features = ["trace"] }
tracing-subscriber = "0.3.18"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.criterion]
features = ["html_reports"]
version = "0.5.1"

# Default features cause compile error: 
# "Rayon cannot be used when targeting wasi32. Try disabling default features."
[target.'cfg(target_arch = "wasm32")'.dev-dependencies.criterion]
default-features = false
features = ["html_reports"]
version = "0.5.1"

[lib]
bench = false

[lints.rust]
# warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
# unused = "deny"

[[bench]]
name = "batch_inverse"
harness = false

[[bench]]
name = "bit_rev"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
harness = false
name = "field"

[[bench]]
harness = false
name = "matrix"

[[bench]]
name = "merkle"
harness = false

[[bench]]
name = "fri"
harness = false

[[bench]]
name = "eval_at_point"
harness = false

[[bench]]
name = "quotients"
harness = false

[[bench]]
name = "interpolate"
harness = false
