[package]
name = "stwo-prover"
version.workspace = true
edition.workspace = true

[features]
parallel = ["rayon"]
slow-tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2.workspace = true
blake3.workspace = true
bytemuck = { workspace = true, features = ["derive", "extern_crate_alloc"] }
cfg-if = "1.0.0"
educe.workspace = true
hex.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
starknet-crypto = "0.6.2"
starknet-ff = "0.3.7"
thiserror.workspace = true
tracing.workspace = true
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
aligned = "0.4.2"
test-log = { version = "0.2.15", features = ["trace"] }
tracing-subscriber = "0.3.18"
[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.43"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.criterion]
features = ["html_reports"]
version = "0.5.1"

# Default features cause compile error:
# "Rayon cannot be used when targeting wasi32. Try disabling default features."
[target.'cfg(target_arch = "wasm32")'.dev-dependencies.criterion]
default-features = false
features = ["html_reports"]
version = "0.5.1"

[lib]
bench = false
crate-type = ["cdylib", "lib"]

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[lints.clippy]
missing_const_for_fn = "warn"

[[bench]]
harness = false
name = "bit_rev"

[[bench]]
harness = false
name = "eval_at_point"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "field"

[[bench]]
harness = false
name = "fri"

[[bench]]
harness = false
name = "lookups"

[[bench]]
harness = false
name = "matrix"

[[bench]]
harness = false
name = "merkle"

[[bench]]
harness = false
name = "poseidon"

[[bench]]
harness = false
name = "prefix_sum"

[[bench]]
harness = false
name = "quotients"

[[bench]]
harness = false
name = "pcs"
