[package]
name = "stwo-verifier"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
derivative.workspace = true
hex.workspace = true
itertools.workspace = true
num-traits.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
[lib]
bench = false

[lints.rust]
warnings = "deny"
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"

[features]
avx512 = []
